--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -7,7 +7,7 @@
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 1px 1px rgba(0,0,0,0.1);
   margin: 10px 0 10px 0;
-  overflow: scroll;
+  overflow-y: scroll;
   width: 100%;
 }
 
